force-app/main/default/objects/Retail_Store__c/Retail_Store__c.object-meta.xml
<CustomObject>
    <description>Dealers stores in different locations</description>
    <label>Retail Store</label>
    <nameField>
        <displayFormat>SI-{000}</displayFormat>
        <label>Store id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>