force-app/main/default/objects/Retail_Store__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Retail store Address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>