force-app/main/default/objects/Retail_Store__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <description>MD relnship to department</description>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Retail Stores</relationshipLabel>
    <relationshipName>Retail_Stores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>