force-app/main/default/objects/Retail_Store__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <description>Retail Store Name</description>
    <label>Store Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>