force-app/main/default/objects/Retail_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Dealer__c</columns>
    <columns>Store_Name__c</columns>
    <columns>Deposit_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>